cmake_minimum_required(VERSION 3.22)

set(NDK_PATH E:/NDK_r21b)

##################### Android设置 #####################
set(CMAKE_SYSTEM_NAME ANDROID) # 设置目标编译平台参数 Android
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_SYSTEM_VERSION 30) # 系统版本
set(ANDROID_PLATFORM 30) # 平台版本
set(ANDROID_SDK_TOOLS_VERSION 30) # 平台版本
set(ANDROID_ABI arm64-v8a) # 设置目标构架 armeabi-v7a arm64-v8a x86 x86_64
set(CMAKE_ANDROID_ARCH_ABI arm64-v8a)
set(ANDROID_NDK ${NDK_PATH}) # 设置ndk路径
set(CMAKE_TOOLCHAIN_FILE ${NDK_PATH}/build/cmake/android.toolchain.cmake)
set(ANDROID_SDK_ROOT ${NDK_PATH})


project(Physx)

add_compile_options(-w)

set(CMAKE_CXX_STANDARD 17)

set(LIBRARY_OUTPUT_PATH
        ${CMAKE_SOURCE_DIR}/outputs/
)

add_compile_definitions(PX_COOKING PX_ANDROID)

add_library(Physx STATIC

        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/NpActor.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/NpAggregate.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/NpArticulation.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/NpArticulationJoint.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/NpArticulationLink.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/NpBatchQuery.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/NpConstraint.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/NpFactory.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/NpMaterial.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/NpMetaData.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/NpPhysics.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/NpPvdSceneQueryCollector.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/NpReadCheck.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/NpRigidDynamic.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/NpRigidStatic.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/NpScene.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/NpSceneQueries.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/NpSerializerAdapter.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/NpShape.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/NpShapeManager.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/NpSpatialIndex.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/NpVolumeCache.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/NpWriteCheck.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/PvdMetaDataPvdBinding.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/PvdPhysicsClient.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/particles/NpParticleFluid.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/particles/NpParticleSystem.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/buffering/ScbActor.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/buffering/ScbAggregate.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/buffering/ScbBase.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/buffering/ScbCloth.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/buffering/ScbMetaData.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/buffering/ScbParticleSystem.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/buffering/ScbScene.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/buffering/ScbScenePvdClient.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/buffering/ScbShape.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/cloth/NpCloth.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/cloth/NpClothFabric.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/cloth/NpClothParticleData.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/ImmediateMode/src/NpImmediateMode.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXMetaData/core/src/PxAutoGeneratedMetaDataObjects.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXMetaData/core/src/PxMetaDataObjects.cpp


        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXCooking/src/Adjacencies.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXCooking/src/Cooking.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXCooking/src/CookingUtils.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXCooking/src/EdgeList.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXCooking/src/MeshCleaner.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXCooking/src/Quantizer.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXCooking/src/mesh/GrbTriangleMeshCooking.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXCooking/src/mesh/HeightFieldCooking.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXCooking/src/mesh/RTreeCooking.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXCooking/src/mesh/TriangleMeshBuilder.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXCooking/src/convex/BigConvexDataBuilder.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXCooking/src/convex/ConvexHullBuilder.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXCooking/src/convex/ConvexHullLib.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXCooking/src/convex/ConvexHullUtils.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXCooking/src/convex/ConvexMeshBuilder.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXCooking/src/convex/ConvexPolygonsBuilder.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXCooking/src/convex/InflationConvexHullLib.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXCooking/src/convex/QuickHullConvexHullLib.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXCooking/src/convex/VolumeIntegration.cpp


        PhysX-3.4-3.4.2/PhysX_3.4/Source/Common/src/CmBoxPruning.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/Common/src/CmCollection.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/Common/src/CmMathUtils.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/Common/src/CmPtrTable.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/Common/src/CmRadixSort.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/Common/src/CmRadixSortBuffered.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/Common/src/CmRenderOutput.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/Common/src/CmVisualization.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/GuBounds.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/GuBox.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/GuCapsule.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/GuCCTSweepTests.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/GuGeometryQuery.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/GuGeometryUnion.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/GuInternal.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/GuMeshFactory.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/GuMetaData.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/GuMTD.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/GuOverlapTests.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/GuRaycastTests.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/GuSerialize.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/GuSweepMTD.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/GuSweepSharedTests.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/GuSweepTests.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/contact/GuContactBoxBox.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/contact/GuContactCapsuleBox.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/contact/GuContactCapsuleCapsule.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/contact/GuContactCapsuleConvex.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/contact/GuContactCapsuleMesh.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/contact/GuContactConvexConvex.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/contact/GuContactConvexMesh.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/contact/GuContactPlaneBox.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/contact/GuContactPlaneCapsule.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/contact/GuContactPlaneConvex.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/contact/GuContactPolygonPolygon.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/contact/GuContactSphereBox.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/contact/GuContactSphereCapsule.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/contact/GuContactSphereMesh.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/contact/GuContactSpherePlane.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/contact/GuContactSphereSphere.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/contact/GuFeatureCode.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/contact/GuLegacyContactBoxHeightField.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/contact/GuLegacyContactCapsuleHeightField.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/contact/GuLegacyContactConvexHeightField.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/contact/GuLegacyContactSphereHeightField.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/common/GuBarycentricCoordinates.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/common/GuSeparatingAxes.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/convex/GuBigConvexData.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/convex/GuConvexHelper.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/convex/GuConvexMesh.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/convex/GuConvexSupportTable.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/convex/GuConvexUtilsInternal.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/convex/GuHillClimbing.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/convex/GuShapeConvex.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/distance/GuDistancePointBox.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/distance/GuDistancePointTriangle.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/distance/GuDistanceSegmentBox.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/distance/GuDistanceSegmentSegment.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/distance/GuDistanceSegmentTriangle.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/sweep/GuSweepBoxBox.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/sweep/GuSweepBoxSphere.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/sweep/GuSweepBoxTriangle_FeatureBased.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/sweep/GuSweepBoxTriangle_SAT.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/sweep/GuSweepCapsuleBox.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/sweep/GuSweepCapsuleCapsule.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/sweep/GuSweepCapsuleTriangle.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/sweep/GuSweepSphereCapsule.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/sweep/GuSweepSphereSphere.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/sweep/GuSweepSphereTriangle.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/sweep/GuSweepTriangleUtils.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/gjk/GuEPA.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/gjk/GuGJKSimplex.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/gjk/GuGJKTest.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/intersection/GuIntersectionBoxBox.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/intersection/GuIntersectionCapsuleTriangle.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/intersection/GuIntersectionEdgeEdge.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/intersection/GuIntersectionRayBox.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/intersection/GuIntersectionRayCapsule.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/intersection/GuIntersectionRaySphere.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/intersection/GuIntersectionSphereBox.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/intersection/GuIntersectionTriangleBox.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/mesh/GuBV32.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/mesh/GuBV32Build.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/mesh/GuBV4.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/mesh/GuBV4Build.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/mesh/GuBV4_AABBSweep.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/mesh/GuBV4_BoxOverlap.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/mesh/GuBV4_CapsuleSweep.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/mesh/GuBV4_CapsuleSweepAA.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/mesh/GuBV4_OBBSweep.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/mesh/GuBV4_Raycast.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/mesh/GuBV4_SphereOverlap.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/mesh/GuBV4_SphereSweep.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/mesh/GuMeshQuery.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/mesh/GuMidphaseBV4.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/mesh/GuMidphaseRTree.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/mesh/GuOverlapTestsMesh.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/mesh/GuRTree.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/mesh/GuRTreeQueries.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/mesh/GuSweepsMesh.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/mesh/GuTriangleMesh.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/mesh/GuTriangleMeshBV4.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/mesh/GuTriangleMeshRTree.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/hf/GuHeightField.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/hf/GuHeightFieldUtil.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/hf/GuOverlapTestsHF.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/hf/GuSweepsHF.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/pcm/GuPCMContactBoxBox.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/pcm/GuPCMContactBoxConvex.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/pcm/GuPCMContactCapsuleBox.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/pcm/GuPCMContactCapsuleCapsule.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/pcm/GuPCMContactCapsuleConvex.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/pcm/GuPCMContactCapsuleHeightField.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/pcm/GuPCMContactCapsuleMesh.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/pcm/GuPCMContactConvexCommon.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/pcm/GuPCMContactConvexConvex.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/pcm/GuPCMContactConvexHeightField.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/pcm/GuPCMContactConvexMesh.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/pcm/GuPCMContactGenBoxConvex.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/pcm/GuPCMContactGenSphereCapsule.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/pcm/GuPCMContactPlaneBox.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/pcm/GuPCMContactPlaneCapsule.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/pcm/GuPCMContactPlaneConvex.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/pcm/GuPCMContactSphereBox.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/pcm/GuPCMContactSphereCapsule.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/pcm/GuPCMContactSphereConvex.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/pcm/GuPCMContactSphereHeightField.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/pcm/GuPCMContactSphereMesh.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/pcm/GuPCMContactSpherePlane.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/pcm/GuPCMContactSphereSphere.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/pcm/GuPCMShapeConvex.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/pcm/GuPCMTriangleContactGen.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/pcm/GuPersistentContactManifold.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/ccd/GuCCDSweepConvexMesh.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/ccd/GuCCDSweepPrimitives.cpp


        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/ExtBroadPhase.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/ExtClothFabricCooker.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/ExtClothGeodesicTetherCooker.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/ExtClothMeshQuadifier.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/ExtClothSimpleTetherCooker.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/ExtCollection.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/ExtConvexMeshExt.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/ExtCpuWorkerThread.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/ExtD6Joint.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/ExtD6JointSolverPrep.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/ExtDefaultCpuDispatcher.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/ExtDefaultErrorCallback.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/ExtDefaultSimulationFilterShader.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/ExtDefaultStreams.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/ExtDistanceJoint.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/ExtDistanceJointSolverPrep.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/ExtExtensions.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/ExtFixedJoint.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/ExtFixedJointSolverPrep.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/ExtJoint.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/ExtMetaData.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/ExtParticleExt.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/ExtPrismaticJoint.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/ExtPrismaticJointSolverPrep.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/ExtPvd.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/ExtPxStringTable.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/ExtRaycastCCD.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/ExtRevoluteJoint.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/ExtRevoluteJointSolverPrep.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/ExtRigidBodyExt.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/ExtSceneQueryExt.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/ExtSimpleFactory.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/ExtSmoothNormals.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/ExtSphericalJoint.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/ExtSphericalJointSolverPrep.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/ExtTriangleMeshExt.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/serialization/SnSerialization.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/serialization/SnSerializationRegistry.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/serialization/SnSerialUtils.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/serialization/Binary/SnBinaryDeserialization.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/serialization/Binary/SnBinarySerialization.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/serialization/Binary/SnConvX.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/serialization/Binary/SnConvX_Align.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/serialization/Binary/SnConvX_Convert.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/serialization/Binary/SnConvX_Error.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/serialization/Binary/SnConvX_MetaData.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/serialization/Binary/SnConvX_Output.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/serialization/Binary/SnConvX_Union.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/serialization/Binary/SnSerializationContext.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/serialization/Xml/SnJointRepXSerializer.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/serialization/Xml/SnRepXCoreSerializer.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/serialization/Xml/SnRepXUpgrader.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/serialization/Xml/SnXmlSerialization.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXMetaData/extensions/src/PxExtensionAutoGeneratedMetaDataObjects.cpp

        PhysX-3.4-3.4.2/PhysX_3.4/Source/SceneQuery/src/SqAABBPruner.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/SceneQuery/src/SqAABBTree.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/SceneQuery/src/SqAABBTreeBuild.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/SceneQuery/src/SqAABBTreeUpdateMap.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/SceneQuery/src/SqBounds.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/SceneQuery/src/SqBucketPruner.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/SceneQuery/src/SqExtendedBucketPruner.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/SceneQuery/src/SqIncrementalAABBPrunerCore.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/SceneQuery/src/SqIncrementalAABBTree.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/SceneQuery/src/SqMetaData.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/SceneQuery/src/SqPruningPool.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/SceneQuery/src/SqPruningStructure.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/SceneQuery/src/SqSceneQueryManager.cpp


        PhysX-3.4-3.4.2/PxShared/src/foundation/src/PsAllocator.cpp
        PhysX-3.4-3.4.2/PxShared/src/foundation/src/PsAssert.cpp
        PhysX-3.4-3.4.2/PxShared/src/foundation/src/PsFoundation.cpp
        PhysX-3.4-3.4.2/PxShared/src/foundation/src/PsMathUtils.cpp
        PhysX-3.4-3.4.2/PxShared/src/foundation/src/PsString.cpp
        PhysX-3.4-3.4.2/PxShared/src/foundation/src/PsTempAllocator.cpp
        PhysX-3.4-3.4.2/PxShared/src/foundation/src/PsUtilities.cpp
        PhysX-3.4-3.4.2/PxShared/src/foundation/src/unix/PsUnixAtomic.cpp
        PhysX-3.4-3.4.2/PxShared/src/foundation/src/unix/PsUnixCpu.cpp
        PhysX-3.4-3.4.2/PxShared/src/foundation/src/unix/PsUnixFPU.cpp
        PhysX-3.4-3.4.2/PxShared/src/foundation/src/unix/PsUnixMutex.cpp
        PhysX-3.4-3.4.2/PxShared/src/foundation/src/unix/PsUnixPrintString.cpp
        PhysX-3.4-3.4.2/PxShared/src/foundation/src/unix/PsUnixSList.cpp
        PhysX-3.4-3.4.2/PxShared/src/foundation/src/unix/PsUnixSocket.cpp
        PhysX-3.4-3.4.2/PxShared/src/foundation/src/unix/PsUnixSync.cpp
        PhysX-3.4-3.4.2/PxShared/src/foundation/src/unix/PsUnixThread.cpp
        PhysX-3.4-3.4.2/PxShared/src/foundation/src/unix/PsUnixTime.cpp


         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/ScActorCore.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/ScActorSim.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/ScArticulationCore.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/ScArticulationJointCore.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/ScArticulationJointSim.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/ScArticulationSim.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/ScBodyCore.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/ScBodyCoreKinematic.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/ScBodySim.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/ScConstraintCore.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/ScConstraintGroupNode.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/ScConstraintInteraction.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/ScConstraintProjectionManager.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/ScConstraintProjectionTree.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/ScConstraintSim.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/ScElementInteractionMarker.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/ScElementSim.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/ScInteraction.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/ScIterators.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/ScMaterialCore.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/ScMetaData.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/ScNPhaseCore.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/ScPhysics.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/ScRigidCore.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/ScRigidSim.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/ScScene.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/ScShapeCore.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/ScShapeInteraction.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/ScShapeSim.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/ScSimStats.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/ScSimulationController.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/ScSqBoundsManager.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/ScStaticCore.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/ScStaticSim.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/ScTriggerInteraction.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/particles/ScParticleBodyInteraction.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/particles/ScParticlePacketShape.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/particles/ScParticleSystemCore.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/particles/ScParticleSystemSim.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/cloth/ScClothCore.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/cloth/ScClothFabricCore.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/cloth/ScClothShape.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/cloth/ScClothSim.cpp


          PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/API/src/px_globals.cpp
          PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/software/src/PxsCCD.cpp
          PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/software/src/PxsContactManager.cpp
          PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/software/src/PxsContext.cpp
          PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/software/src/PxsDefaultMemoryManager.cpp
          PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/software/src/PxsIslandSim.cpp
          PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/software/src/PxsMaterialCombiner.cpp
          PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/software/src/PxsNphaseImplementationContext.cpp
          PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/software/src/PxsSimpleIslandManager.cpp
          PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/common/src/collision/PxcContact.cpp
          PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/common/src/pipeline/PxcContactCache.cpp
          PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/common/src/pipeline/PxcContactMethodImpl.cpp
          PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/common/src/pipeline/PxcMaterialHeightField.cpp
          PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/common/src/pipeline/PxcMaterialMesh.cpp
          PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/common/src/pipeline/PxcMaterialMethodImpl.cpp
          PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/common/src/pipeline/PxcMaterialShape.cpp
          PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/common/src/pipeline/PxcNpBatch.cpp
          PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/common/src/pipeline/PxcNpCacheStreamPair.cpp
          PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/common/src/pipeline/PxcNpContactPrepShared.cpp
          PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/common/src/pipeline/PxcNpMemBlockPool.cpp
          PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/common/src/pipeline/PxcNpThreadContext.cpp

         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelAABB/src/BpBroadPhase.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelAABB/src/BpBroadPhaseMBP.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelAABB/src/BpBroadPhaseSap.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelAABB/src/BpBroadPhaseSapAux.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelAABB/src/BpMBPTasks.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelAABB/src/BpSAPTasks.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelAABB/src/BpSimpleAABBManager.cpp

         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelDynamics/src/DyArticulation.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelDynamics/src/DyArticulationContactPrep.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelDynamics/src/DyArticulationContactPrepPF.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelDynamics/src/DyArticulationHelper.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelDynamics/src/DyArticulationScalar.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelDynamics/src/DyArticulationSIMD.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelDynamics/src/DyConstraintPartition.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelDynamics/src/DyConstraintSetup.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelDynamics/src/DyConstraintSetupBlock.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelDynamics/src/DyContactPrep.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelDynamics/src/DyContactPrep4.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelDynamics/src/DyContactPrep4PF.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelDynamics/src/DyContactPrepPF.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelDynamics/src/DyDynamics.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelDynamics/src/DyFrictionCorrelation.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelDynamics/src/DyRigidBodyToSolverBody.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelDynamics/src/DySolverConstraints.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelDynamics/src/DySolverConstraintsBlock.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelDynamics/src/DySolverControl.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelDynamics/src/DySolverControlPF.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelDynamics/src/DySolverPFConstraints.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelDynamics/src/DySolverPFConstraintsBlock.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelDynamics/src/DyThreadContext.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelDynamics/src/DyThresholdTable.cpp

        PhysX-3.4-3.4.2/PxShared/src/task/src/TaskManager.cpp

        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelCloth/src/Allocator.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelCloth/src/Factory.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelCloth/src/PhaseConfig.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelCloth/src/SwCloth.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelCloth/src/SwClothData.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelCloth/src/SwCollision.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelCloth/src/SwFabric.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelCloth/src/SwFactory.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelCloth/src/SwInterCollision.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelCloth/src/SwSelfCollision.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelCloth/src/SwSolver.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelCloth/src/SwSolverKernel.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelCloth/src/TripletScheduler.cpp

        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelParticles/src/PtBatcher.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelParticles/src/PtBodyTransformVault.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelParticles/src/PtCollision.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelParticles/src/PtCollisionBox.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelParticles/src/PtCollisionCapsule.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelParticles/src/PtCollisionConvex.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelParticles/src/PtCollisionMesh.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelParticles/src/PtCollisionPlane.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelParticles/src/PtCollisionSphere.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelParticles/src/PtContextCpu.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelParticles/src/PtDynamics.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelParticles/src/PtParticleData.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelParticles/src/PtParticleShapeCpu.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelParticles/src/PtParticleSystemSimCpu.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelParticles/src/PtSpatialHash.cpp
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelParticles/src/PtSpatialLocalHash.cpp


         PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXCharacterKinematic/src/CctBoxController.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXCharacterKinematic/src/CctCapsuleController.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXCharacterKinematic/src/CctCharacterController.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXCharacterKinematic/src/CctCharacterControllerCallbacks.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXCharacterKinematic/src/CctCharacterControllerManager.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXCharacterKinematic/src/CctController.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXCharacterKinematic/src/CctObstacleContext.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXCharacterKinematic/src/CctSweptBox.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXCharacterKinematic/src/CctSweptCapsule.cpp
         PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXCharacterKinematic/src/CctSweptVolume.cpp
)

include_directories(

        PhysX-3.4-3.4.2/PhysX_3.4/Common/include
        PhysX-3.4-3.4.2/PxShared/include
        PhysX-3.4-3.4.2/PxShared/src/foundation/include
        PhysX-3.4-3.4.2/PxShared/src/fastxml/include
        PhysX-3.4-3.4.2/PxShared/src/pvd/include
        PhysX-3.4-3.4.2/Externals/nvToolsExt/1/include
        PhysX-3.4-3.4.2/PhysX_3.4/Include/common
        PhysX-3.4-3.4.2/PhysX_3.4/Include/geometry
        PhysX-3.4-3.4.2/PhysX_3.4/Include/GeomUtils
        PhysX-3.4-3.4.2/PhysX_3.4/Include/pvd
        PhysX-3.4-3.4.2/PhysX_3.4/Include/particles
        PhysX-3.4-3.4.2/PhysX_3.4/Include/cloth
        PhysX-3.4-3.4.2/PhysX_3.4/Include
        PhysX-3.4-3.4.2/PhysX_3.4/Source/Common/src
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/headers
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/contact
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/common
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/convex
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/distance
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/sweep
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/gjk
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/intersection
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/mesh
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/hf
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/pcm
        PhysX-3.4-3.4.2/PhysX_3.4/Source/GeomUtils/src/ccd
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/API/include
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/software/include
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/common/include/pipeline
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelAABB/include
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelDynamics/include
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelDynamics/src
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelParticles/include
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/buffering
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/particles
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/cloth
        PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/include
        PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src
        PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/particles
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXCooking/src
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXCooking/src/mesh
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXCooking/src/convex
        PhysX-3.4-3.4.2/PhysX_3.4/Source/SceneQuery/include
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXMetaData/core/include
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXGpu/include

        PhysX-3.4-3.4.2/PhysX_3.4/Include/GeomUtils
        PhysX-3.4-3.4.2/PhysX_3.4/Include/cooking

        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXMetaData/core/include
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXMetaData/extensions/include
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/serialization/Xml
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/serialization/Binary
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysXExtensions/src/serialization/File
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PvdSDK/src

        PhysX-3.4-3.4.2/PhysX_3.4/Include/extensions

        PhysX-3.4-3.4.2/PxShared/include
        PhysX-3.4-3.4.2/PxShared/src/foundation/include
        PhysX-3.4-3.4.2/PxShared/src/fastxml/include
        PhysX-3.4-3.4.2/PxShared/src/pvd/include
        PhysX-3.4-3.4.2/Externals/nvToolsExt/1/include

        PhysX-3.4-3.4.2/PhysX_3.4/Source/SceneQuery/include
        PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/include
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/API/include
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src
        PhysX-3.4-3.4.2/PhysX_3.4/Source/PhysX/src/buffering

        PhysX-3.4-3.4.2/PxShared/include
        PhysX-3.4-3.4.2/PxShared/src/foundation/include


        PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/include
        PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src
        PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/particles
        PhysX-3.4-3.4.2/PhysX_3.4/Source/SimulationController/src/cloth
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/unix/include
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/API/include
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/software/include
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/common/include/math
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/common/include/utils
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/common/include/collision
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/common/include/pipeline
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelCloth/include
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelAABB/include
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelDynamics/include
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelParticles/include
        PhysX-3.4-3.4.2/Externals/nvToolsExt/1/include

         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/API/include
         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/common/include
         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/common/include/collision
         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/common/include/pipeline
         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/common/include/pipeline/unix
         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/common/include/utils
         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/software/include/unix
         PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelDynamics/include/unix

          PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/common/include/utils
          PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/common/include/pipeline
          PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelAABB/include
          PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelAABB/src
          PhysX-3.4-3.4.2/PhysX_3.4/Source/GpuBroadPhase/include
          PhysX-3.4-3.4.2/PhysX_3.4/Source/GpuBroadPhase/src
          PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelAABB/unix/include


        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/software/include
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevel/software/include/unix
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelDynamics/include
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelDynamics/src
        PhysX-3.4-3.4.2/PhysX_3.4/Source/LowLevelDynamics/include/unix

        PhysX-3.4-3.4.2/PhysX_3.4/Include/characterkinematic

)

