cmake_minimum_required(VERSION 3.22)

set(NDK_PATH E:/NDK_r21b)

##################### Android设置 #####################
set(CMAKE_SYSTEM_NAME ANDROID) # 设置目标编译平台参数 Android
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_SYSTEM_VERSION 30) # 系统版本
set(ANDROID_PLATFORM 30) # 平台版本
set(ANDROID_SDK_TOOLS_VERSION 30) # 平台版本
set(ANDROID_ABI arm64-v8a) # 设置目标构架 armeabi-v7a arm64-v8a x86 x86_64
set(CMAKE_ANDROID_ARCH_ABI arm64-v8a)
set(ANDROID_NDK ${NDK_PATH}) # 设置ndk路径
set(CMAKE_TOOLCHAIN_FILE ${NDK_PATH}/build/cmake/android.toolchain.cmake)
set(ANDROID_SDK_ROOT ${NDK_PATH})


project(Physx34)

set(CMAKE_CXX_STANDARD 14)

set(LIBRARY_OUTPUT_PATH
        ${CMAKE_SOURCE_DIR}/outputs/
)

add_compile_options(-w)

add_library(Physx34 STATIC

       src/NpActor.cpp
       src/NpAggregate.cpp
       src/NpArticulation.cpp
       src/NpArticulationJoint.cpp
       src/NpArticulationLink.cpp
       src/NpBatchQuery.cpp
       src/NpConstraint.cpp
       src/NpFactory.cpp
       src/NpMaterial.cpp
       src/NpMetaData.cpp
       src/NpPhysics.cpp
       src/NpPvdSceneQueryCollector.cpp
       src/NpReadCheck.cpp
       src/NpRigidDynamic.cpp
       src/NpRigidStatic.cpp
       src/NpScene.cpp
       src/NpSceneQueries.cpp
       src/NpSerializerAdapter.cpp
       src/NpShape.cpp
       src/NpShapeManager.cpp
       src/NpSpatialIndex.cpp
       src/NpVolumeCache.cpp
       src/NpWriteCheck.cpp
       src/PvdMetaDataPvdBinding.cpp
       src/PvdPhysicsClient.cpp
       src/particles/NpParticleFluid.cpp
       src/particles/NpParticleSystem.cpp
       src/buffering/ScbActor.cpp
       src/buffering/ScbAggregate.cpp
       src/buffering/ScbBase.cpp
       src/buffering/ScbCloth.cpp
       src/buffering/ScbMetaData.cpp
       src/buffering/ScbParticleSystem.cpp
       src/buffering/ScbScene.cpp
       src/buffering/ScbScenePvdClient.cpp
       src/buffering/ScbShape.cpp
       src/cloth/NpCloth.cpp
       src/cloth/NpClothFabric.cpp
       src/cloth/NpClothParticleData.cpp
        ../ImmediateMode/src/NpImmediateMode.cpp
        ../PhysXMetaData/core/src/PxAutoGeneratedMetaDataObjects.cpp
        ../PhysXMetaData/core/src/PxMetaDataObjects.cpp

)

include_directories(

        ./../../Common/include
        ./../../../../PxShared/include
        ./../../../../PxShared/src/foundation/include
        ./../../../../PxShared/src/fastxml/include
        ./../../../../PxShared/src/pvd/include
        ./../../../../Externals/nvToolsExt/1/include
        ./../../Include/common
       ./../../Include/geometry
       ./../../Include/GeomUtils
       ./../../Include/pvd
       ./../../Include/particles
       ./../../Include/cloth
       ./../../Include
        ./../../Source/Common/src
        ./../../Source/GeomUtils/headers
        ./../../Source/GeomUtils/src
        ./../../Source/GeomUtils/src/contact
        ./../../Source/GeomUtils/src/common
        ./../../Source/GeomUtils/src/convex
        ./../../Source/GeomUtils/src/distance
        ./../../Source/GeomUtils/src/sweep
        ./../../Source/GeomUtils/src/gjk
        ./../../Source/GeomUtils/src/intersection
        ./../../Source/GeomUtils/src/mesh
        ./../../Source/GeomUtils/src/hf
        ./../../Source/GeomUtils/src/pcm
        ./../../Source/GeomUtils/src/ccd
        ./../../Source/LowLevel/API/include
        ./../../Source/LowLevel/software/include
        ./../../Source/LowLevel/common/include/pipeline
        ./../../Source/LowLevelAABB/include
        ./../../Source/LowLevelDynamics/include
        ./../../Source/LowLevelDynamics/src
        ./../../Source/LowLevelParticles/include
        ./../../Source/PhysX/src
        ./../../Source/PhysX/src/buffering
        ./../../Source/PhysX/src/particles
        ./../../Source/PhysX/src/cloth
        ./../../Source/SimulationController/include
        ./../../Source/SimulationController/src
        ./../../Source/SimulationController/src/particles
        ./../../Source/PhysXCooking/src
        ./../../Source/PhysXCooking/src/mesh
        ./../../Source/PhysXCooking/src/convex
        ./../../Source/SceneQuery/include
        ./../../Source/PhysXMetaData/core/include

)
